# CSC299-Project

./: LLMChatLog.md  Project_DocFormatting.py  README.md
CSC299-Project/task_manager/task-01/: README.md
task-01/: README.md  cli.py  config.py  task_manager.py  utils.py
task-02/: README.md  cli.py  task_manager.py  utils.py
task-03/: pyproject.toml
task-03/src/task_03/: .gitignore  __init__.py  cli.py  config.py  task_manager.py  utils.py
task-03/src/task_03/tests/: test_inc.py  test_task_manager.py
task-04/: pyproject.toml
task-04/src/task_04/: __init__.py
task_manager/task-01/: task_manager.py
