[project]
name = "task-03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matteo Bongiorno", email = "pot8toking@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
task-03 = "task_03:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
